crates/general/fixtures/invalid/closed_records.zt
-- Expected: semantic-error (parse-clean + semantic diagnostic)
-- Spec: records §10.1 — closed records reject extra and missing required fields.

Server :: type { host : Text; port : Int; }

-- Extra field `tls` not declared in Server
extra_field : Server = { host = "localhost"; port = 8080; tls = true; }

-- Missing required field `port` — not caught syntactically
missing_field : Server = { host = "localhost"; }

-- Completely wrong fields
wrong_fields : Server = { name = "server"; code = 42; }

extra_field
